ccapp1_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      cctodoapp.service: ccapp1
    name: ccapp1
  spec:
    type: NodePort
    ports:
      - name: "3000"
        port: 3000
        targetPort: 3000
        nodePort: 30000
  selector:
    cctodoapp.service: ccapp1
