ccapp2_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cctodoapp.service: ccapp2
  name: ccapp2
spec:
  type: NodePort
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3000
      nodePort: 30001
  selector:
    cctodoapp.service: ccapp2
