ccapp3_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cctodoapp.service: ccapp3
  name: ccapp3
spec:
  type: NodePort
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3000
      nodePort: 30002
  selector:
    cctodoapp.service: ccapp3
